# perceptron

./: CMakeLists.txt  README.md  perceptron.pro  perceptron.qbs
resources/qml/: main.qml
src/: lineview.cpp  lineview.h  main.cpp  perceptron.cpp  perceptron.h  perceptrontrainer.cpp  perceptrontrainer.h  perceptronview.cpp  perceptronview.h  pointview.cpp  pointview.h
